# FaceBlurrer

./: CMakeLists.txt  README.md  README.txt
source/: CMakeLists.txt
source/boost-1.67.0/cmake/Modules/: DownloadBoost.cmake
source/detector/: CMakeLists.txt
source/detector/include/: FaceDetectorDLL.h  JsonWriter.h  Utils.h
source/detector/src/: FaceBlurrer.cpp  FaceDetectorDLL.cpp  JsonWriter.cpp
source/detector_lib/: CMakeLists.txt
source/detector_lib/include/: FaceDetector.h
source/detector_lib/src/: FaceDetector.cpp
source/tests/: CMakeLists.txt
source/tests/src/: main.cpp  testLib.cpp
