set(BUILD_DOCS 		 		FALSE)
set(BUILD_EXAMPLES 	 		FALSE)
set(BUILD_TESTS 	 		FALSE)
set(BUILD_PERF_TESTS 	 		FALSE)
set(BUILD_opencv_java 	 		FALSE)
set(BUILD_opencv_python  		FALSE)
set(BUILD_opencv_world 	 		ON)
set(WITH_FFMPEG 	 		FALSE)
set(OpenCV_BINARY_DIR       		${CMAKE_INSTALL_PREFIX}/opencv/build/)
set(OPENCV_BIN_INSTALL_PATH 		${OpenCV_BINARY_DIR}bin/)
set(OPENCV_INCLUDE_INSTALL_PATH       	${OpenCV_BINARY_DIR}include/)
set(OPENCV_LIB_INSTALL_PATH       	${OpenCV_BINARY_DIR}lib/)
add_subdirectory(opencv-4.5.0)

add_subdirectory(boost-1.67.0)

set(DETECTOR_BINARY_DIR 		${CMAKE_BINARY_DIR}/../detector/)
add_subdirectory(detector_lib)
add_subdirectory(detector)